Updated index page (work in progress)

--- a/sergiu_page/templates/index.html
+++ b/sergiu_page/templates/index.html
@@ -3,6 +3,8 @@
 {% load static %}
 <link rel="stylesheet" href="{% static 'style.css' %}">
 <body>
-    <h1>Work in progress</h1>
+    <div id="bckphoto">
+        <h1>Work in progress</h1>
+    </div>
 </body>
 </html>
