--- a/static/style.css
+++ b/static/style.css
@@ -3,8 +3,26 @@ body {
 }
 
 h1 {
-    font-size: 169px;
+    font-size: 13px;
+    font-weight: lighter;
+    font-style: italic;
     color: darkcyan;
     font-family: 'Roboto', Arial, sans-serif;
     opacity: 70%;
+    text-align: right;
+    padding-right: 10px;
+    cursor: default;
+    user-select: none;
+}
+
+#bckphoto {
+    background-image: url("photos/2022_dec.JPG");
+    background-size: 100%;
+    height: 600px;
+    width: 800px;
+    border: 5px solid;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
