--- a/sergiu_page/templates/index.html
+++ b/sergiu_page/templates/index.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="{% static 'style.css' %}">
 <body>
     <div id="bckphoto">
-        <h1>Work in progress</h1>
+        <!-- <h1>Work in progress</h1> -->
     </div>
 </body>
 </html>
